# raillabel

./: .buildinfo  .editorconfig  .git_archival.txt  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  genindex.html  git-conventional-commits.json  howto.html  index.html  intro.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  solution.html  tutorial.html
.github/workflows/: build-test-publish.yml  docs.yml  lint.yml
LICENSES/: .license_header.txt
_sources/: howto.rst.txt  index.rst.txt  intro.rst.txt  solution.rst.txt
_sources/code/: modules.rst.txt  raillabel.filter._filter_abc.rst.txt  raillabel.filter.end_time_filter.rst.txt  raillabel.filter.exclude_annotation_id_filter.rst.txt  raillabel.filter.exclude_annotation_type_filter.rst.txt  raillabel.filter.exclude_attributes_filter.rst.txt  raillabel.filter.exclude_frame_id_filter.rst.txt  raillabel.filter.exclude_object_id_filter.rst.txt  raillabel.filter.exclude_object_type_filter.rst.txt  raillabel.filter.exclude_sensor_id_filter.rst.txt  raillabel.filter.exclude_sensor_type_filter.rst.txt  raillabel.filter.include_annotation_id_filter.rst.txt  raillabel.filter.include_annotation_type_filter.rst.txt  raillabel.filter.include_attributes_filter.rst.txt  raillabel.filter.include_frame_id_filter.rst.txt  raillabel.filter.include_object_id_filter.rst.txt  raillabel.filter.include_object_type_filter.rst.txt  raillabel.filter.include_sensor_id_filter.rst.txt  raillabel.filter.include_sensor_type_filter.rst.txt  raillabel.filter.rst.txt  raillabel.filter.start_time_filter.rst.txt  raillabel.format._attributes.rst.txt  raillabel.format._sensor_without_intrinsics.rst.txt  raillabel.format._util.rst.txt  raillabel.format.bbox.rst.txt  raillabel.format.camera.rst.txt  raillabel.format.cuboid.rst.txt  raillabel.format.frame.rst.txt  raillabel.format.frame_interval.rst.txt  raillabel.format.gps_imu.rst.txt  raillabel.format.intrinsics_pinhole.rst.txt  raillabel.format.intrinsics_radar.rst.txt  raillabel.format.lidar.rst.txt  raillabel.format.metadata.rst.txt  raillabel.format.num.rst.txt  raillabel.format.object.rst.txt  raillabel.format.other_sensor.rst.txt  raillabel.format.point2d.rst.txt  raillabel.format.point3d.rst.txt  raillabel.format.poly2d.rst.txt  (+45 more)
_sources/howtos/: 4 Filtering Scenes.rst.txt
code/: modules.html  raillabel.filter._filter_abc.html  raillabel.filter.end_time_filter.html  raillabel.filter.exclude_annotation_id_filter.html  raillabel.filter.exclude_annotation_type_filter.html  raillabel.filter.exclude_attributes_filter.html  raillabel.filter.exclude_frame_id_filter.html  raillabel.filter.exclude_object_id_filter.html  raillabel.filter.exclude_object_type_filter.html  raillabel.filter.exclude_sensor_id_filter.html  raillabel.filter.exclude_sensor_type_filter.html  raillabel.filter.html  raillabel.filter.include_annotation_id_filter.html  raillabel.filter.include_annotation_type_filter.html  raillabel.filter.include_attributes_filter.html  raillabel.filter.include_frame_id_filter.html  raillabel.filter.include_object_id_filter.html  raillabel.filter.include_object_type_filter.html  raillabel.filter.include_sensor_id_filter.html  raillabel.filter.include_sensor_type_filter.html  raillabel.filter.start_time_filter.html  raillabel.format._attributes.html  raillabel.format._sensor_without_intrinsics.html  raillabel.format._util.html  raillabel.format.bbox.html  raillabel.format.camera.html  raillabel.format.cuboid.html  raillabel.format.frame.html  raillabel.format.frame_interval.html  raillabel.format.gps_imu.html  raillabel.format.html  raillabel.format.intrinsics_pinhole.html  raillabel.format.intrinsics_radar.html  raillabel.format.lidar.html  raillabel.format.metadata.html  raillabel.format.num.html  raillabel.format.object.html  raillabel.format.other_sensor.html  raillabel.format.point2d.html  raillabel.format.point3d.html  (+45 more)
docs/: Makefile  make.bat
docs/source/: conf.py  howto.rst  index.rst  intro.rst  solution.rst  tutorial.rst
howtos/: 1 Validating Annotation Files.html  2 Loading Annotation Files.html  3 Saving Annotation Files.html  4 Filtering Scenes.html
raillabel/: CHANGELOG.md  README.md  __init__.py  exceptions.py  filter.py  load.py  save.py  validate.py
raillabel/_filter_classes/: _filter_abc.py  _filter_annotation_ids.py  _filter_annotation_types.py  _filter_attributes.py  _filter_end.py  _filter_frames.py  _filter_object_ids.py  _filter_object_types.py  _filter_sensors.py  _filter_start.py
raillabel/_understand_ai_t4_format/: __init__.py  _annotation.py  _translation.py  bounding_box_2d.py  bounding_box_3d.py  coordinate_system.py  frame.py  metadata.py  point_3d.py  polygon_2d.py  polyline_2d.py  quaternion.py  scene.py  segmentation_3d.py  sensor_reference.py  size_3d.py
raillabel/_util/: _attribute_type.py  _clean_dict.py  _warning.py
raillabel/filter/: __init__.py  _filter_abc.py  end_time_filter.py  exclude_annotation_id_filter.py  exclude_annotation_type_filter.py  exclude_attributes_filter.py  exclude_frame_id_filter.py  exclude_object_id_filter.py  exclude_object_type_filter.py  exclude_sensor_id_filter.py  exclude_sensor_type_filter.py  filter.py  frame_id_filter.py  include_annotation_id_filter.py  include_annotation_type_filter.py  include_attributes_filter.py  include_frame_id_filter.py  include_object_id_filter.py  include_object_type_filter.py  include_sensor_id_filter.py  include_sensor_type_filter.py  start_time_filter.py
raillabel/format/: __init__.py  _annotation.py  _attribute_type.py  _attributes.py  _object_annotation.py  _sensor_without_intrinsics.py  _util.py  bbox.py  camera.py  coordinate_system.py  cuboid.py  element_data_pointer.py  frame.py  frame_interval.py  gps_imu.py  intrinsics_pinhole.py  intrinsics_radar.py  lidar.py  metadata.py  num.py  object.py  object_annotations.py  object_data.py  other_sensor.py  point2d.py  point3d.py  poly2d.py  poly3d.py  quaternion.py  radar.py  scene.py  seg3d.py  sensor.py  (+7 more)
tests/: conftest.py  master_test.py  test_tutorial.py
(+324 files in other folders)
