# Copyright DB InfraGO AG and contributors
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["setuptools>=64", "setuptools_scm[toml]>=3.4", "wheel"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]

name = "raillabel"
description = "A devkit for working with recorded and annotated train ride data from Deutsche Bahn."
readme = "README.md"
requires-python = ">=3.8, <3.14"
license = { text = "Apache-2.0" }
authors = [{ name = "DB InfraGO AG" }]
keywords = []
classifiers = [
  "Development Status :: 1 - Planning",
  "License :: OSI Approved :: Apache Software License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "pydantic<3.0.0",
  "eval-type-backport==0.2.0"
]

[project.urls]
Homepage = "https://github.com/DSD-DBS/raillabel"
Documentation = "https://dsd-dbs.github.io/raillabel"

[project.optional-dependencies]
docs = ["furo", "sphinx", "sphinx-copybutton", "tomli; python_version<'3.14'"]

test = ["pytest", "pytest-cov", "json5"]

[tool.ruff]
line-length = 101

[tool.ruff.lint]
exclude = ["tests/*", "docs/*"]
select = ["ALL"]
ignore = [
  "A002",   # objects from OpenLABEL conflict with a Python builtin, but staying consistent with the domain is more important

  "B024",   # needed for _FilterAbc

  "COM812", # conflicts with ruff formatter

  "D100",   # imo no docstrings are necessary in public modules
  "D107",   # __init__ docstrings are not necessary
  "D203",   # incompatible with D211
  "D213",   # incompatible with D212
  "D413",   # rule by convention which looks weird
  "D417",   # kwargs can not be typed for the filter function

  "FBT001", # flags in functions are not bad practice
  "FBT002", # flags in functions are not bad practice

  "INP001", # load and save are not meant as packages and are only folders for consistency

  "ISC001", # conflicts with ruff formatter

  "N802",   # does not allow constant abstractproperties

  "PLR0913",# constructors sometimes need many arguments

  "TCH001", # adds hard to understand compexity without providing a benefit for smaller projects
  "TCH002", # same as TCH001
  "TCH003", # same as TCH001

  "SIM103", # less readable in some cases imo

  # Should be removed in the future
  "PGH003",
]
pydocstyle.convention = "google"

[tool.mypy]
check_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
warn_redundant_casts = true
warn_unreachable = true
python_version = "3.12"
disable_error_code = ["override"]
plugins = "pydantic.mypy"
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = """
  --strict-config
  --strict-markers
"""
testpaths = ["tests"]
xfail_strict = true

[tool.setuptools]
platforms = ["any"]
zip-safe = false

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.setuptools.packages.find]
exclude = ["LICENSES", "docs/*", "tests/*"]

[tool.setuptools_scm]
# This section must exist for setuptools_scm to work
